Add support for disabling servers (#12)
